--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "node-ws-test",
+  "name": "mined-nodes",
   "version": "0.0.1",
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku-examples/node-ws-test.git"
+    "url": "https://git.heroku.com/gentle-river-68323.git"
   },
   "dependencies": {
     "express": "^4.4.5",
